name:                spock-pkb
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/joycse06/spock-pkb#readme
license:             BSD3
license-file:        LICENSE
author:              Joy Nag
maintainer:          joyruet06@gmail.com
copyright:           Joy Nag
category:            app
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable spock-pkb
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock >= 0.11
                     , mtl
                     , text
                     , cheapskate
                     , skylighting
                     , blaze-html
                     , lucid
                     , Spock-lucid

test-suite           tasty
  type:
                     exitcode-stdio-1.0
  main-is:
                     TastyLoader.hs
  other-modules:
                     Pkb.MainTest
  default-language:
                     Haskell2010

  build-depends:
                     base < 5 && >= 3
                     , HUnit >= 1.5
                     , QuickCheck >= 2.9
                     , tasty >= 1
                     , tasty-hunit >= 0.9
                     , tasty-quickcheck >= 0.8

  ghc-options:
                    -Wall
                    -threaded
  hs-source-dirs:
                    specs
